# soroban-auditor

./: .gitignore  .vimspector.json  Cargo.toml  README.md  patterns.json  patterns.toml  sdk_hashes.json
src/: contract_test.rs  fmt.rs  lib.rs  main.rs
src/cfg/: builder.rs  mod.rs
src/soroban/: common_env.rs  mod.rs  sdk_linker.rs  specs_generate.rs
src/ssa/: expr.rs  mod.rs  stmt.rs
src/structuring/: mod.rs  rename_vars.rs
src/wasm_wrapper/: mod.rs  wasm.rs  wasm_adapter.rs
tests/: contract.wasm  contract_test.wasm  hello.optimized.wasm  hello.wasm  soroban_hello_world_contract.wasm  soroban_token_contract.optimized.wasm  soroban_token_contract.wasm  tlsh_tests.rs
tests/hello/: Cargo.toml
tests/hello/src/: lib.rs
