[package]
name = "auditor"
version = "0.1.1"
authors = ["StellarChain <support@stellarchain.io>"]
edition = "2021"

[dependencies]
clap = "2.33"
slab = "0.4"
z3-sys = "0.5.0"
z3 = "0.4.0"
replace_with = "0.1"
soroban-sdk = "20.4.0"
soroban-spec-rust = "20.4.0"
soroban-spec = "20.4.0"
wasmi-validation = "0.3"
parity-wasm = "0.41.0"
serde_json = "1.0"
soroban-wasmi = "0.31.1-soroban.20.0.1"
tlsh = "0.1.0"
regex = "1.10.4"
lcs = "0.2.0"

[replace]
"z3-sys:0.5.0" = { git = "https://github.com/stellarchain/z3.rs" }
"z3:0.4.0" = { git = "https://github.com/stellarchain/z3.rs" }

[profile.dev]
debug = true
